--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
   "builds": [
     { "src": "package.json", "use": "@now/next@canary" }
   ],
-  "routes": [
-    { "src": "/static/.*", "headers": { "cache-control": "public, max-age=31536000, immutable" } }
+  "headers": [
+    { "source": "/static/.*", "headers": { "key": "cache-control", "value": "public, max-age=31536000, immutable" } }
   ]
 }
