--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,20 @@
   "version": 2,
   "name": "blog",
   "builds": [
-    { "src": "package.json", "use": "@now/next@canary" }
+    {
+      "src": "package.json",
+      "use": "@now/next@canary"
+    }
   ],
   "headers": [
-    { "source": "/static/.*", "headers": { "key": "cache-control", "value": "public, max-age=31536000, immutable" } }
+    {
+      "source": "/static/.*",
+      "headers": [
+        {
+          "key": "cache-control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 }
